--- a/news/templates/all-news/base.html
+++ b/news/templates/all-news/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap4 %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% block styles %}
         {% bootstrap_css %}
+        <link rel="stylesheet" href="{% static 'css/basenews.css'%}">
     {% endblock %}
     {% if title %}
         <title>Moriga Tribune {{ title}} </title>
