updated templates with data

--- a/news/templates/all-news/todays-news.html
+++ b/news/templates/all-news/todays-news.html
@@ -1,4 +1,18 @@
 {% extends './base.html' %}
 {% block content%}
     {{ block.super }}
+
+    <div class="container">
+
+        <!-- looping through music -->
+        {% for news_item in news %}
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <h2 class="text-center">{{news_item.title}}</h2>
+                </div>
+            </div>
+        {% empty %}
+            <h2 class="text-center">no articles today</h2>
+        {% endfor %}
+    </div>
 {% endblock %}
