--- a/news/templates/all-news/todays-news.html
+++ b/news/templates/all-news/todays-news.html
@@ -11,6 +11,12 @@
                     <h2 class="text-center">{{news_item.title}}</h2>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <img src="{{news_item.article_image.url}}" class="img-fluid" alt="">
+                </div>
+            </div>
         {% empty %}
             <h2 class="text-center">no articles today</h2>
         {% endfor %}
